<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Wordmaster</string>
	
	<string name="goldpeg">Gold Peg</string>
	<string name="silverpeg">Silver Peg</string>
	<string name="whitepeg">White Peg</string>
	
	<string name="action_refresh">Refresh</string>
	<string name="action_close">Close Window</string>
	<string name="action_create">Create Game</string>
	<string name="action_unhide">Unhide Game&#8230;</string>
	<string name="action_achievements">Achievements</string>
	<string name="action_logout">Logout</string>
	<string name="action_menu">Menu</string>
	
	<string name="context_menu_hide_game">Hide Game</string>
	
	<string name="turn">Turn</string>
	<string name="guess">Guess</string>
	<string name="game_screen">Game Screen</string>
	<string name="oppavatar">Opponent\'s Avatar</string>
	<string name="playeravatar">Player\'s Avatar</string>
	<string name="crown">Winner</string>
	<string name="yourturn">Your Turn</string>
	
	<string name="network_error">Network Unavailable</string>
	<string name="network_error_help">Please check your data connection</string>
	<string name="turn_error">It\'s not your turn!</string>
	<string name="turn_error_help">Wait for your opponent to take their turn.</string>
	<string name="word_error">Not a word</string>
	<string name="word_error_help">That word is not in the Wordmaster dictionary.</string>
	<string name="server_error">Server Error</string>
	<string name="server_error_help">Something went wrong. Try again later.</string>
	<string name="opponent_error">Game not ready</string>
	<string name="opponent_error_help">Opponent hasn\'t chosen their word yet.</string>
	<string name="match_error">Match already exists</string>
	<string name="match_error_help">You\'re already playing against that person.</string>
	<string name="word_set_error">Word already set</string>
	<string name="word_set_error_help">You\'ve already chosen your word for this game.</string>
	<string name="auto_match_error">Auto match pending</string>
	<string name="auto_match_error_help">You\'re already in the queue for matching.</string>
	
	<string name="pull_to_refresh_pull_label">Pull to load history&#8230;</string>
	<string name="pull_to_refresh_release_label">Release to load history&#8230;</string>
	<string name="pull_to_refresh_refreshing_label">Loading&#8230;</string>
	
	<string name="default_score">0</string>
	<string name="default_turn">0</string>
	<string name="default_time">23h</string>
	<string name="default_word">CATS</string>
	<string name="default_menu_text">vs Adam</string>
	<string name="default_opp_guess">Adam guessed DUCT</string>
	<string name="default_opp_guess_win">Adam guessed DUCT\nAdam\'s word was FEET</string>
	<string name="default_row_word">Your word is DUCT</string>
	
	<string name="whysignin">Sign in with Google to begin playing with your friends.</string>
	<string name="itembg">List Item Background</string>
	<string name="setword_help">Type your word for the next game</string>
	<string name="triangle">Downward arrow</string>
	
	<string name="create_title">New Game</string>
	
	<string name="unhide_title">Unhide Game</string>
	
	<string name="upgrade_title">Upgrade</string>
	<string name="why_upgrade">To create more games you need to upgrade to the full version of Wordmaster.</string>
	<string name="why_upgrade_cont">This one-off payment will allow you to create as many games as you like.</string>
	<string name="buy_upgrade">Upgrade Now</string>
	<string name="cancel_upgrade">No Thanks</string>
	<string name="upgrade_thanks">Thank you for your purchase. Wordmaster has been upgraded to the full version.</string>
	<string name="upgrade_thanks_cont">You can now create as many games as you like.</string>
	<string name="upgrade_error">Something went wrong when contacting the Google Play store. You have not been charged.</string>
	<string name="upgrade_error_cont">Would you like to try your purchase again?</string>
	<string name="OK">OK</string>
	<string name="try_again">Try Again</string>
	
	<string name="divider">View Divider</string>
	
	<string name="app_id">731445442831</string>

	<string name="A">A</string>
	<string name="B">B</string>
	<string name="C">C</string>
	<string name="D">D</string>
	<string name="E">E</string>
	<string name="F">F</string>
	<string name="G">G</string>
	<string name="H">H</string>
	<string name="I">I</string>
	<string name="J">J</string>
	<string name="K">K</string>
	<string name="L">L</string>
	<string name="M">M</string>
	<string name="N">N</string>
	<string name="O">O</string>
	<string name="P">P</string>
	<string name="Q">Q</string>
	<string name="R">R</string>
	<string name="S">S</string>
	<string name="T">T</string>
	<string name="U">U</string>
	<string name="V">V</string>
	<string name="W">W</string>
	<string name="X">X</string>
	<string name="Y">Y</string>
	<string name="Z">Z</string>

	<string name="gamehelper_unknown_error">Unknown Error</string>
	<string name="gamehelper_sign_in_failed">Oh dear, we couldn\'t sign in</string>
	<string name="gamehelper_app_misconfigured">I\'ve made a boo-boo</string>
	<string name="gamehelper_license_failed">Are you sure you bought this?</string>
	<string name="signin_other_error">There was an issue with sign-in, please try again later.</string>

</resources>