<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/black_overlay">

	<LinearLayout
		android:layout_width="280dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_margin="40dp"
		android:background="@drawable/border"
		android:orientation="vertical">

		<LinearLayout
			android:id="@+id/upgradeHeader"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/menu_header">

			<TextView
				android:id="@+id/upgrade_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="10dp"
				android:gravity="center"
				android:text="@string/upgrade_title"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="@color/menu_header_text" />

		</LinearLayout>

		<TextView
			android:id="@+id/why_upgrade"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:padding="10dp"
			android:text="@string/why_upgrade"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<TextView
			android:id="@+id/why_upgrade_cont"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/why_upgrade_cont"
			android:textAppearance="?android:attr/textAppearanceMedium" />

		<Button
			android:id="@+id/buy_upgrade"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:layout_marginTop="10dp"
			android:text="@string/buy_upgrade" />

		<Button
			android:id="@+id/cancel_upgrade"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
			android:text="@string/cancel_upgrade" />

	</LinearLayout>

</FrameLayout>
