<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<ImageView
		android:id="@+id/itembg"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_gravity="bottom"
		android:contentDescription="@string/itembg"
		android:src="@drawable/gameendbg"
		android:state_pressed="true" />
		
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:padding="5dp" >

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="vertical" >

			<ImageView
				android:id="@+id/crown"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:contentDescription="@string/crown"
				android:src="@drawable/crown_flipped" />

		</LinearLayout>
	
		<uk.co.thomasc.wordmaster.view.RussoText
			android:id="@+id/guess"
			android:layout_width="wrap_content"
			android:layout_height="47dp"
			android:layout_gravity="center"
			android:layout_marginLeft="25dp"
			android:gravity="center"
			android:text="@string/default_word"
			android:textColor="@color/maintext"
			android:textSize="30sp" />
	
		<uk.co.thomasc.wordmaster.view.TimeSinceText
			android:id="@+id/time"
			android:layout_width="0dp"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="right|center"
			android:text="@string/default_time"
			android:textColor="@color/maintext" />
	
	</LinearLayout>
	
</FrameLayout>