<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/screen_menu"
	android:layout_width="fill_parent"
	android:layout_height="match_parent"
	android:background="@color/mainbg"
	android:orientation="vertical" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/menu_header" >

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableLeft="@drawable/ic_launcher"
			android:drawablePadding="10dp"
			android:gravity="center"
			android:text="@string/app_name"
			android:textColor="@color/menu_header_text"
			android:textSize="20sp" />

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1" />

		<ProgressBar
			android:id="@+id/refresh_progress"
			android:layout_width="36dp"
			android:layout_height="wrap_content"
			android:visibility="gone" />

		<ImageView
			android:id="@+id/refresh"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:contentDescription="@string/game_screen"
			android:padding="5dp"
			android:src="@drawable/navigation_refresh" />

		<ImageView
			android:id="@+id/startnew"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:contentDescription="@string/game_screen"
			android:padding="5dp"
			android:src="@drawable/content_new" />

	</LinearLayout>
	
	<com.google.android.gms.common.SignInButton
		android:id="@+id/button_sign_in"
		style="@style/SignInButton" />

	<TextView
		android:id="@+id/whysignin"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:text="@string/whysignin"
		android:textColor="@color/whysignin" />

	<ListView
		android:id="@+id/main_feed"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:visibility="gone" >

	</ListView>

</LinearLayout>